--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "bcrypt": "^5.1.1",
+    "class-validator": "^0.14.1",
     "mongoose": "^8.8.4",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
